Version 1.5.0
  Enhancements:
  - Add table option "sample_percent" to ANALYZE very large tables
    This can speed up ANALYZE significantly.
    Idea by PAscal Lemoy.

  Bugfixes:
  - Fix errors with now() and date/timestamp parameters in queries
    This bug was introduced in 1.3.0 and caused errors like
    ERROR:  error executing query: OCIDateTimeFromText failed to convert parameter
    DETAIL:  ORA-01843: not a valid month
    when now() or "current_timestamp" and friends or date/timestamp
    parameters were used.
    Report by Li Hailong.
  - IMPORT FOREIGN SCHEMA sometimes didn't import primary keys
    Report by Jean-Marc Lessard, fix by PAscal Lemoy.
  - Fix memory leaks during ANALYZE
    This caused out of memory errors when large tables were analyzed.
    Report by Alessio Checcucci.
  - IMPORT FOREIGN SCHEMA should not tolerate missing remote schema
    It used to cause a warning, but the SQL standard requires an error.
    Report by Jean-Marc Lessard.

Version 1.4.0, released 2016-04-08
  Enhancements:
  - Add option "readonly" for IMPORT FOREIGN TABLE that sets the foreign table
    option "readonly" to "true" on all imported foreign tables.
    Idea by Julien Goux.
  - Allow foreign tables based on arbitrary Oracle queries.
    The query, enclosed in parentheses, can be supplied as option "table".
    Requested by "tsykes", "cirix81" and Julien Goux.

  Bugfixes:
  - Selecting timestamps with lc_messages other than English caused errors like
    "ORA-01406: la valeur de la colonne extraite a été tronquée"
    Report by Damien Szczyt.
  - Complicated queries could lead to an error like
    "Internal oracle_fdw error: encountered unknown node type 524."
    Report by "bartonjd".
  - PostGIS type "geometry" cannot be found if ArcGIS is installed.
    Report by "dtoller".

Version 1.3.0, released 2015-12-21
  Enhancements:
  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.