@@ -183,7 +183,7 @@ extern int oracleIsStatementOpen(oracleSession *session);
 extern struct oraTable *oracleDescribe(oracleSession *session, char *schema, char *table, char *pgname, long max_long);
 extern void oracleEstimate(oracleSession *session, const char *query, double seq_page_cost, int block_size, double *startup_cost, double *total_cost, double *rows, int *width);
 extern void oracleExplain(oracleSession *session, const char *query, int *nrows, char ***plan);
-extern void oraclePrepareQuery(oracleSession *session, const char *query, const struct oraTable *oraTable);
+extern void oraclePrepareQuery(oracleSession *session, const char *query, const struct oraTable *oraTable, unsigned int prefetch);
 extern int oracleExecuteQuery(oracleSession *session, const struct oraTable *oraTable, struct paramDesc *paramList);
 extern int oracleFetchNext(oracleSession *session);
 extern void oracleGetLob(oracleSession *session, void *locptr, oraType type, char **value, long *value_len, unsigned long trunc);
