@@ -3,6 +3,9 @@ Version 1.5.0
   - Add table option "sample_percent" to ANALYZE very large tables
     This can speed up ANALYZE significantly.
     Idea by PAscal Lemoy.
+  - Introduce a table option "prefetch" for the Oracle row prefetch count.
+    This can speed up foreign table scans.
+    Per discussion with by PAscal Lemoy and Maurizio De Giorgi.
 
   Bugfixes:
   - Fix errors with now() and date/timestamp parameters in queries
